<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoorActivity"
    android:layout_margin="10dp" xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:id="@+id/button_power_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/button_power_status" />

    <LinearLayout
        android:id="@+id/power_row_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button_power_status"
        android:orientation="horizontal" >
	    <Button
	        android:id="@+id/button_power_on1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/button_power_on1" />
	    <Button
	        android:id="@+id/button_power_off1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/button_power_off1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/power_row_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/power_row_1"
        android:orientation="horizontal" >
	    <Button
	        android:id="@+id/button_power_on2"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/button_power_on2" />
	    <Button
	        android:id="@+id/button_power_off2"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/button_power_off2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/power_row_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/power_row_2"
        android:orientation="horizontal" >
	    <Button
	        android:id="@+id/button_power_on3"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/button_power_on3" />
	    <Button
	        android:id="@+id/button_power_off3"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/button_power_off3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/power_row_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/power_row_3"
        android:orientation="horizontal" >
	    <Button
	        android:id="@+id/button_power_on4"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/button_power_on4" />
	    <Button
	        android:id="@+id/button_power_off4"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/button_power_off4" />
    </LinearLayout>

    <fragment
        android:id="@+id/fragmentKsoap"
        android:name="net.vandut.magisterka.fullapp.KsoapFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        tools:layout="@layout/ksoap_fragment_layout" />

</RelativeLayout>